[package]
name = "twitch_chat_wrapper"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitchchat = { path = "../twitchchat", features=["smol"] }
dotenv = "0.15.0"
anyhow = "1.0.32"
smol = "0.3.3"