[package]
name = "twitch_chat_wrapper"
version = "0.2.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"
description = "Wraps around the Twitchchat crate by Museun for projects built that need Twitchchat integration easily."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
eyre = "0.6.0"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
irc = "0.15.0"
futures = "0.3.21"
